mega menu spacing fix, added ability to hide mega menu image title, added ability to hide collection page title

--- a/assets/sk-custom.css
+++ b/assets/sk-custom.css
@@ -708,8 +708,8 @@ div aside.widget_text .widget-title {
 .hero-block {
 	margin: 0;
 	padding: 0;
-	width: 110%;
-	transform: translateX(-4.25%);
+	/* width: 110%; */
+	/* transform: translateX(-4.25%); */
 }
 
 .sendero-session-txt-container {
